# neural-reels

./: .gitignore  Makefile  README.md  pyproject.toml
app/: agent.py
app/agents/: expert_researcher.py  image_generator.py  image_prompt_generator.py  research_compiler.py  scene_breakdown.py  script_writer.py  seo_optimizer.py  theme_definer.py  user_feedback.py  video_assembler.py  video_generator.py  video_prompt_generator.py  voiceover_generator.py  web_researcher.py
app/callbacks/: callbacks.py
app/utils/: audio_utils.py  genai_utils.py  image_utils.py
frontend/: README.md  app.py  neural_reels_app.py
researcher_agent/: agent.py  audio_utils.py  genai_utils.py
researcher_agent/agents/: expert_researcher.py  image_generator.py  image_prompt_generator.py  research_compiler.py  scene_breakdown.py  script_writer.py  seo_optimizer.py  theme_definer.py  tts_gemini_agent.py  user_feedback.py  video_assembler.py  video_generator.py  video_prompt_generator.py  voiceover_generator.py  web_researcher.py
researcher_agent/callbacks/: callbacks.py
researcher_agent/utils/: audio_utils.py  genai_utils.py  image_utils.py
static/: diagram.drawio
